@@ -1,0 +1,11 @@
+/**
+ * MarkAsJunk2 plugin styles
+ */
+.toolbar a.button.markasjunk2::before,
+.toolbarmenu li a.markasjunk2::before {
+  content: "\f1b8";
+}
+.toolbar a.button.markasnotjunk2::before,
+.toolbarmenu li a.markasnotjunk2::before {
+  content: "\f01c";
+}
